@@ -18,43 +18,28 @@
 
 package com.clubobsidian.obbylang.manager.script;
 
+import com.caoccao.qjs4j.core.*;
+import com.clubobsidian.obbylang.compat.JavaObjectRegistry;
+import com.clubobsidian.obbylang.compat.NashornJavaCompat;
 import com.clubobsidian.obbylang.manager.RegisteredManager;
 import com.clubobsidian.obbylang.manager.addon.AddonManager;
-import com.clubobsidian.obbylang.manager.listener.ListenerManager;
 import com.clubobsidian.obbylang.pipe.Pipe;
 import com.clubobsidian.obbylang.plugin.ObbyLangPlugin;
 import com.clubobsidian.obbylang.util.ChatColor;
-import javassist.ClassClassPath;
-import javassist.ClassPool;
+import com.google.gson.Gson;
+import com.google.gson.JsonSyntaxException;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
-import org.openjdk.nashorn.api.scripting.NashornScriptEngineFactory;
-import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 import javax.inject.Inject;
-import javax.script.Bindings;
-import javax.script.Compilable;
-import javax.script.CompiledScript;
-import javax.script.ScriptContext;
-import javax.script.ScriptEngine;
-import javax.script.ScriptException;
-import javax.script.SimpleScriptContext;
 import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
-import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.Map.Entry;
-import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -62,11 +47,16 @@ import java.util.stream.Collectors;
 
 public class ScriptManager {
 
+    private static final Gson GSON = new Gson();
+
     private boolean loaded;
-    private final Path directory;
-    private final ScriptEngine engine;
-    private final Compilable compilableEngine;
-    private final Map<String, CompiledScript> scripts = new ConcurrentHashMap<>();
+    private final Path scriptDirectory;
+    private final Path projectsDirectory;
+    private final JSRuntime engine;
+    private final Map<String, JSContext> scripts = new ConcurrentHashMap<>();
+    private final Map<String, JavaObjectRegistry> scriptRegistries = new ConcurrentHashMap<>();
+    private final Map<String, JSContext> projects = new ConcurrentHashMap<>();
+    private final Map<String, JavaObjectRegistry> projectRegistries = new ConcurrentHashMap<>();
 
     private final ObbyLangPlugin plugin;
     private final AddonManager addonManager;
@@ -75,55 +65,36 @@ public class ScriptManager {
     private ScriptManager(ObbyLangPlugin plugin, AddonManager addonManager) {
         ClassLoader cl = plugin.getClass().getClassLoader();
         Thread.currentThread().setContextClassLoader(cl);
-        System.setProperty("nashorn.args", "--language=es6");
-        this.engine = new NashornScriptEngineFactory().getScriptEngine();
-        this.compilableEngine = (Compilable) engine;
         this.plugin = plugin;
-        this.directory = Paths.get(plugin.getDataFolder().getPath(), "scripts");
+        this.scriptDirectory = Paths.get(plugin.getDataFolder().getPath(), "scripts");
+        this.projectsDirectory = Paths.get(plugin.getDataFolder().getPath(), "projects");
+        this.engine = new JSRuntime();
         this.addonManager = addonManager;
     }
 
     public boolean load() {
         if(!this.loaded) {
-            this.loadClassPool();
             this.loadScripts();
+            this.loadProjects();
             this.loaded = true;
             return true;
         }
         return false;
     }
 
-    private void loadClassPool() {
-        ClassPool.getDefault().insertClassPath(new ClassClassPath(ScriptObjectMirror.class));
-        ClassPool.getDefault().insertClassPath(new ClassClassPath(ScriptWrapper.class));
-        ClassPool.getDefault().insertClassPath(new ClassClassPath(ScriptWrapper[].class));
-        ClassPool.getDefault().insertClassPath(new ClassClassPath(ListenerManager.class));
-        ClassPool.getDefault().insertClassPath(new ClassClassPath(Field.class));
-        ClassPool.getDefault().insertClassPath(new ClassClassPath(Map.class));
-    }
-
-    private CompiledScript createCompiledScript(File file) {
-        try(FileReader reader = new FileReader(file)) {
-            return this.compilableEngine.compile(reader);
-        } catch(IOException | ScriptException e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
-
     private void loadScripts() {
         try {
-            Files.createDirectories(this.directory);
+            Files.createDirectories(this.scriptDirectory);
         } catch(IOException e) {
             e.printStackTrace();
         }
 
-        Collection<File> fileCollection = FileUtils.listFiles(this.directory.toFile(), new String[]{"js"}, true);
+        Collection<File> fileCollection = FileUtils.listFiles(this.scriptDirectory.toFile(), new String[]{"js"}, true);
         File[] files = fileCollection.toArray(new File[fileCollection.size()]);
 
         Collection<File> sortedScripts = Arrays.stream(files)
                 .sorted(Comparator.comparing(File::getName))
-                .collect(Collectors.toList());
+                .toList();
 
         for(File file : sortedScripts) {
             try {
@@ -134,12 +105,306 @@ public class ScriptManager {
         }
     }
 
-    public Path getDirectory() {
-        return this.directory;
+    private void loadProjects() {
+        try {
+            Files.createDirectories(this.projectsDirectory);
+        } catch(IOException e) {
+            e.printStackTrace();
+            return;
+        }
+        File[] subDirs = this.projectsDirectory.toFile().listFiles(File::isDirectory);
+        if(subDirs == null || subDirs.length == 0) {
+            return;
+        }
+        Map<String, ProjectDescriptor> descriptors = new LinkedHashMap<>();
+        Map<String, File> folders = new LinkedHashMap<>();
+        for(File dir : subDirs) {
+            ProjectDescriptor desc = this.readDescriptor(dir);
+            if(desc == null) {
+                this.plugin.getLogger().warning("Project in folder '" + dir.getName() + "': missing or invalid project.json — skipping");
+                continue;
+            }
+            if(desc.getName() == null || desc.getName().isBlank()) {
+                this.plugin.getLogger().warning("Project in folder '" + dir.getName() + "': project.json missing required 'name' field — skipping");
+                continue;
+            }
+            String key = desc.getName().toLowerCase();
+            descriptors.put(key, desc);
+            folders.put(key, dir);
+        }
+        for(Map.Entry<String, ProjectDescriptor> entry : descriptors.entrySet()) {
+            for(String dep : entry.getValue().getDependencies()) {
+                if(dep.endsWith(".js") && !this.scripts.containsKey(dep)) {
+                    this.plugin.getLogger().warning("Project '" + entry.getKey() + "' depends on script '" + dep + "' which is not loaded");
+                }
+            }
+        }
+        List<String> ordered = this.topoSort(descriptors);
+        for(String projectName : ordered) {
+            this.loadProject(projectName, descriptors.get(projectName), folders.get(projectName));
+        }
     }
 
-    public CompiledScript getScript(String script) {
-        return this.scripts.get(script);
+    private List<String> topoSort(Map<String, ProjectDescriptor> descriptors) {
+        Map<String, List<String>> dependents = new HashMap<>();
+        Map<String, Integer> inDegree = new HashMap<>();
+        for(String key : descriptors.keySet()) {
+            inDegree.put(key, 0);
+            dependents.put(key, new ArrayList<>());
+        }
+        for(Map.Entry<String, ProjectDescriptor> entry : descriptors.entrySet()) {
+            String key = entry.getKey();
+            for(String dep : entry.getValue().getDependencies()) {
+                if(dep.endsWith(".js")) {
+                    continue;
+                }
+                String depKey = dep.toLowerCase();
+                if(!descriptors.containsKey(depKey)) {
+                    this.plugin.getLogger().warning("Project '" + key + "' depends on unknown project '" + dep + "' — ignoring");
+                    continue;
+                }
+                dependents.get(depKey).add(key);
+                inDegree.merge(key, 1, Integer::sum);
+            }
+        }
+        Queue<String> queue = new ArrayDeque<>();
+        for(Map.Entry<String, Integer> entry : inDegree.entrySet()) {
+            if(entry.getValue() == 0) {
+                queue.add(entry.getKey());
+            }
+        }
+        List<String> result = new ArrayList<>();
+        while(!queue.isEmpty()) {
+            String current = queue.poll();
+            result.add(current);
+            for(String dependent : dependents.get(current)) {
+                int remaining = inDegree.merge(dependent, -1, Integer::sum);
+                if(remaining == 0) {
+                    queue.add(dependent);
+                }
+            }
+        }
+        if(result.size() != descriptors.size()) {
+            Set<String> cyclic = descriptors.keySet().stream()
+                    .filter(k -> !result.contains(k))
+                    .collect(Collectors.toSet());
+            this.plugin.getLogger().severe("Circular dependency detected among projects: " + cyclic + " — these projects will not be loaded");
+        }
+        return result;
+    }
+
+    private boolean loadProject(String projectName, ProjectDescriptor desc, File folder) {
+        File mainFile = new File(folder, desc.getMain());
+        if(!mainFile.exists()) {
+            this.plugin.getLogger().severe("Project '" + projectName + "': main file '" + desc.getMain() + "' not found — skipping");
+            return false;
+        }
+        this.plugin.getLogger().info("Loading project: " + folder.getName() + " ('" + desc.getName() + "')");
+        JSContext context = this.engine.createContext();
+        JavaObjectRegistry registry = this.addBindingsToContext(context, projectName);
+        this.projects.put(projectName, context);
+        this.projectRegistries.put(projectName, registry);
+        try {
+            String source = Files.readString(mainFile.toPath(), StandardCharsets.UTF_8);
+            context.eval(source, mainFile.getAbsolutePath(), true);
+            return true;
+        } catch(Exception e) {
+            this.unloadProject(projectName);
+            e.printStackTrace();
+            return false;
+        }
+    }
+
+    private Map.Entry<ProjectDescriptor, File> findProject(String name) {
+        File[] subDirs = this.projectsDirectory.toFile().listFiles(File::isDirectory);
+        if(subDirs == null) {
+            return null;
+        }
+        for(File dir : subDirs) {
+            ProjectDescriptor desc = this.readDescriptor(dir);
+            if(desc != null && desc.getName() != null && desc.getName().equalsIgnoreCase(name)) {
+                return Map.entry(desc, dir);
+            }
+        }
+        return null;
+    }
+
+    public boolean loadProject(String name) {
+        return this.loadProject(name, null);
+    }
+
+    public boolean loadProject(String name, Pipe pipe) {
+        try {
+            String key = name.toLowerCase();
+            if(this.projects.containsKey(key)) {
+                return false;
+            }
+            Map.Entry<ProjectDescriptor, File> found = this.findProject(name);
+            if(found == null) {
+                return false;
+            }
+            return this.loadProject(key, found.getKey(), found.getValue());
+        } catch (Exception ex) {
+            sendStacktrace(ex, pipe);
+            ex.printStackTrace();
+        }
+        return false;
+    }
+
+    public JSContext getProject(String projectName) {
+        return this.projects.get(projectName);
+    }
+
+    public List<String> getProjectNames() {
+        return new ArrayList<>(this.projects.keySet());
+    }
+
+    public List<String> getDisabledProjectNames() {
+        File[] subDirs = this.projectsDirectory.toFile().listFiles(File::isDirectory);
+        if(subDirs == null) {
+            return Collections.emptyList();
+        }
+        List<String> names = new ArrayList<>();
+        for(File dir : subDirs) {
+            ProjectDescriptor desc = this.readDisabledDescriptor(dir);
+            if(desc != null && desc.getName() != null && !desc.getName().isBlank()) {
+                names.add(desc.getName().toLowerCase());
+            }
+        }
+        return names;
+    }
+
+    public boolean unloadProject(String projectName) {
+        return this.unloadProject(projectName, null);
+    }
+
+    public boolean unloadProject(String projectName, Pipe pipe) {
+        try {
+            String key = projectName.toLowerCase();
+            for(Object addon : this.addonManager.getAddons().values()) {
+                if(addon instanceof RegisteredManager registeredManager) {
+                    registeredManager.unregister(key);
+                }
+            }
+            JSContext removed = this.projects.remove(key);
+            if(removed != null) {
+                removed.close();
+            }
+            JavaObjectRegistry registry = this.projectRegistries.remove(key);
+            if(registry != null) {
+                registry.clear();
+            }
+            return removed != null;
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            this.sendStacktrace(ex, pipe);
+        }
+        return false;
+    }
+
+    public boolean reloadProject(String projectName) {
+        return this.reloadProject(projectName, null);
+    }
+
+    public boolean reloadProject(String projectName, Pipe pipe) {
+        String key = projectName.toLowerCase();
+        Map.Entry<ProjectDescriptor, File> found = this.findProject(projectName);
+        if(found == null) {
+            return false;
+        }
+        this.unloadProject(key, pipe);
+        return this.loadProject(key, found.getKey(), found.getValue());
+    }
+
+    public boolean enableProject(String name) {
+        return this.enableProject(name, null);
+    }
+
+    public boolean enableProject(String name, Pipe pipe) {
+        try {
+            File[] subDirs = this.projectsDirectory.toFile().listFiles(File::isDirectory);
+            if(subDirs == null) {
+                return false;
+            }
+            for(File dir : subDirs) {
+                ProjectDescriptor desc = this.readDisabledDescriptor(dir);
+                if(desc == null || !desc.getName().equalsIgnoreCase(name)) {
+                    continue;
+                }
+                File disFile = new File(dir, "project.json.dis");
+                File jsonFile = new File(dir, "project.json");
+                Files.copy(disFile.toPath(), jsonFile.toPath());
+                disFile.delete();
+            }
+            return this.loadProject(name, pipe);
+        } catch(IOException ex) {
+            ex.printStackTrace();
+            this.sendStacktrace(ex, pipe);
+        }
+        return false;
+    }
+
+    public boolean disableProject(String name) {
+        return this.disableProject(name, null);
+    }
+
+    public boolean disableProject(String name, Pipe pipe) {
+        Map.Entry<ProjectDescriptor, File> found = this.findProject(name);
+        if (found == null) {
+            return false;
+        }
+        File dir = found.getValue();
+        File jsonFile = new File(dir, "project.json");
+        File disFile = new File(dir, "project.json.dis");
+        this.unloadProject(name.toLowerCase(), pipe);
+        try {
+            Files.copy(jsonFile.toPath(), disFile.toPath());
+            jsonFile.delete();
+            return true;
+        } catch(IOException ex) {
+            ex.printStackTrace();
+            this.sendStacktrace(ex, pipe);
+            return false;
+        }
+    }
+
+    private ProjectDescriptor readDescriptor(File folder) {
+        return this.readDescriptorFile(new File(folder, "project.json"));
+    }
+
+    private ProjectDescriptor readDisabledDescriptor(File folder) {
+        return this.readDescriptorFile(new File(folder, "project.json.dis"));
+    }
+
+    private ProjectDescriptor readDescriptorFile(File jsonFile) {
+        if(!jsonFile.exists()) {
+            return null;
+        }
+        try {
+            String raw = Files.readString(jsonFile.toPath(), StandardCharsets.UTF_8);
+            return GSON.fromJson(raw, ProjectDescriptor.class);
+        } catch(IOException | JsonSyntaxException e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
+
+    public Path getScriptDirectory() {
+        return this.scriptDirectory;
+    }
+
+    public Path getProjectDirectory() {
+        return this.projectsDirectory;
+    }
+
+    public JSContext getScript(String name) {
+        JSContext context = this.scripts.get(name);
+        return context != null ? context : this.projects.get(name);
+    }
+
+    public JavaObjectRegistry getRegistry(String name) {
+        JavaObjectRegistry scriptRegistry = this.scriptRegistries.get(name);
+        return scriptRegistry != null ? scriptRegistry : this.projectRegistries.get(name);
     }
 
     public boolean isScriptLoaded(String script) {
@@ -149,8 +414,7 @@ public class ScriptManager {
     public String getScriptListString() {
         StringBuilder builder = new StringBuilder();
         Set<String> scripts = this.scripts.keySet();
-
-        for(File file : FileUtils.listFiles(this.directory.toFile(), new String[]{"js", "dis"}, true)) {
+        for(File file : FileUtils.listFiles(this.scriptDirectory.toFile(), new String[]{"js", "dis"}, true)) {
             String name = file.getName();
             String strippedName = name.replace(".dis", "").replace(".js", "");
             if(name.endsWith(".dis")) {
@@ -165,23 +429,62 @@ public class ScriptManager {
             builder.append(strippedName);
             builder.append(ChatColor.WHITE + ", ");
         }
+        if(builder.isEmpty()) {
+            return "No scripts found";
+        }
+        return builder.substring(0, builder.toString().length() - 2);
+    }
+
+    public String getProjectListString() {
+        File[] subDirs = this.projectsDirectory.toFile().listFiles(File::isDirectory);
+        if(subDirs == null || subDirs.length == 0) {
+            return "No projects found";
+        }
+        StringBuilder builder = new StringBuilder();
+        for(File dir : subDirs) {
+            ProjectDescriptor desc = this.readDescriptor(dir);
+            if(desc != null && desc.getName() != null && !desc.getName().isBlank()) {
+                String key = desc.getName().toLowerCase();
+                builder.append(this.projects.containsKey(key) ? ChatColor.GREEN : ChatColor.GRAY);
+                builder.append(key);
+                builder.append(ChatColor.WHITE + ", ");
+            } else {
+                ProjectDescriptor disDesc = this.readDisabledDescriptor(dir);
+                if(disDesc != null && disDesc.getName() != null && !disDesc.getName().isBlank()) {
+                    builder.append(ChatColor.RED);
+                    builder.append(disDesc.getName().toLowerCase());
+                    builder.append(ChatColor.WHITE + ", ");
+                }
+            }
+        }
+        if(builder.isEmpty()) {
+            return "No projects found";
+        }
         return builder.substring(0, builder.toString().length() - 2);
     }
 
     public List<String> getScriptNamesRaw() {
-        List<String> scriptNames = new ArrayList<>();
-        for(String str : this.scripts.keySet()) {
-            scriptNames.add(str);
-        }
-        return scriptNames;
+        return new ArrayList<>(this.scripts.keySet());
     }
 
     public List<String> getScriptNames() {
         List<String> scriptNames = new ArrayList<>();
         for(String str : this.scripts.keySet()) {
-            scriptNames.add(str.replace(".js", "").replace(".dis", ""));
+            scriptNames.add(normalizeScriptEnding(str));
         }
         return scriptNames;
+    }
+
+    private String normalizeScriptEnding(String str) {
+        return str.replace(".js", "").replace(".dis", "");
+    }
+
+    public List<String> getDisabledScriptNames() {
+        return FileUtils.listFiles(this.scriptDirectory.toFile(), new String[]{"dis"}, true)
+                .stream()
+                .filter(file -> file.getName().endsWith(".js.dis"))
+                .map(file -> normalizeScriptEnding(file.getName()))
+                .toList();
     }
 
     public boolean unloadScript(String className) {
@@ -189,23 +492,33 @@ public class ScriptManager {
     }
 
     public boolean unloadScript(String className, Pipe pipe) {
-        if(!className.endsWith(".js")) {
-            className += ".js";
-        }
-        CompiledScript script = this.scripts.get(className);
-        if(script == null) {
-            return false;
-        }
-
-        for(Object addon : this.addonManager.getAddons().values()) {
-            if(addon instanceof RegisteredManager) {
-                RegisteredManager manager = (RegisteredManager) addon;
-                manager.unregister(className);
+        try {
+            if(!className.endsWith(".js")) {
+                className += ".js";
             }
+            JSContext script = this.scripts.get(className);
+            if(script == null) {
+                return false;
+            }
+            for(Object addon : this.addonManager.getAddons().values()) {
+                if(addon instanceof RegisteredManager registeredManager) {
+                    registeredManager.unregister(className);
+                }
+            }
+            JSContext removed = this.scripts.remove(className);
+            if (removed != null) {
+                removed.close();
+            }
+            JavaObjectRegistry registry = this.scriptRegistries.remove(className);
+            if (registry != null) {
+                registry.clear();
+            }
+            return removed != null;
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            this.sendStacktrace(ex, pipe);
         }
-
-        this.scripts.remove(className);
-        return true;
+        return false;
     }
 
     public boolean loadScript(String location) {
@@ -216,7 +529,7 @@ public class ScriptManager {
         if(!location.endsWith(".js")) {
             location += ".js";
         }
-        File file = new File(this.directory.toFile(), location);
+        File file = new File(this.scriptDirectory.toFile(), location);
         return this.loadScript(file, pipe);
     }
 
@@ -227,49 +540,51 @@ public class ScriptManager {
         }
         try {
             this.plugin.getLogger().info("Loading: " + scriptName);
-            CompiledScript script = this.createCompiledScript(file);
-            this.scripts.put(scriptName, script);
-            SimpleScriptContext context = this.createContext(scriptName);
-            script.eval(context);
+            JSContext context = this.engine.createContext();
+            JavaObjectRegistry registry = this.addBindingsToContext(context, scriptName);
+            this.scripts.put(scriptName, context);
+            this.scriptRegistries.put(scriptName, registry);
+            String source = Files.readString(file.toPath(), StandardCharsets.UTF_8);
+            context.eval(source, file.getName(), false);
             return true;
         } catch(Exception e) {
             this.unloadScript(scriptName, pipe);
             e.printStackTrace();
-            if(pipe != null) {
-                this.sendStacktrace(e, pipe);
-            }
+            this.sendStacktrace(e, pipe);
         }
         return false;
     }
 
-    private SimpleScriptContext createContext(String scriptName) {
-        SimpleScriptContext context = new SimpleScriptContext();
-        Bindings bindings = this.engine.createBindings();
-        context.setBindings(bindings, ScriptContext.ENGINE_SCOPE);
-        context.setAttribute("owner", scriptName, ScriptContext.ENGINE_SCOPE);
-        Iterator<Entry<String, Object>> it = this.addonManager.getAddons().entrySet().iterator();
-        while(it.hasNext()) {
-            Entry<String, Object> next = it.next();
+    private JavaObjectRegistry addBindingsToContext(JSContext context, String scriptName) {
+        context.getGlobalObject().set("owner", new JSString(scriptName));
+        JavaObjectRegistry registry = NashornJavaCompat.install(context);
+        for (Entry<String, Object> next : this.addonManager.getAddons().entrySet()) {
             String key = next.getKey();
             Object value = next.getValue();
-            context.setAttribute(key, value, ScriptContext.ENGINE_SCOPE);
+            context.getGlobalObject().set(key, NashornJavaCompat.wrapJavaObject(context, registry, value));
         }
-        return context;
+        return registry;
     }
 
     public boolean reloadScript(String location, Pipe pipe) {
-        if(!location.endsWith(".js"))
-            location = location + ".js";
-
-        File file = new File(this.directory.toFile(), location);
-        if(!file.exists())
-            return false;
-
-        boolean unload = this.unloadScript(file.getName(), pipe);
-        if(!unload)
-            return false;
-
-        return this.loadScript(location, pipe);
+        try {
+            if(!location.endsWith(".js")) {
+                location = location + ".js";
+            }
+            File file = new File(this.scriptDirectory.toFile(), location);
+            if(!file.exists()) {
+                return false;
+            }
+            boolean unload = this.unloadScript(file.getName(), pipe);
+            if(!unload) {
+                return false;
+            }
+            return this.loadScript(location, pipe);
+        } catch (Exception ex) {
+            this.sendStacktrace(ex, pipe);
+            ex.printStackTrace();
+        }
+        return false;
     }
 
     public boolean enabledScript(String location) {
@@ -277,35 +592,36 @@ public class ScriptManager {
     }
 
     public boolean enableScript(String location, Pipe pipe) {
-        if(!location.contains(".js")) {
-            location += ".js";
-        }
-        File file = new File(this.directory.toFile(), location);
-        if(file.getName().endsWith(".dis")) {
-            File toCopy = new File(this.directory.toFile(), location.replace(".dis", ""));
-            try {
-                Files.copy(Paths.get(file.toURI()), Paths.get(toCopy.toURI()));
-                file.delete();
-                return this.loadScript(location.replace(".dis", ""), pipe);
-            } catch(IOException e) {
-                e.printStackTrace();
-                return false;
+        try {
+            if(!location.contains(".js")) {
+                location += ".js";
             }
-        } else if(!file.exists()) {
-            File original = file;
-            file = new File(this.directory.toFile(), location + ".dis");
-            if(!file.exists()) {
-                return false;
-            } else {
+            File file = new File(this.scriptDirectory.toFile(), location);
+            if(file.getName().endsWith(".dis")) {
+                File toCopy = new File(this.scriptDirectory.toFile(), location.replace(".dis", ""));
                 try {
-                    Files.copy(Paths.get(file.toURI()), Paths.get(original.toURI()));
+                    Files.copy(Paths.get(file.toURI()), Paths.get(toCopy.toURI()));
                     file.delete();
-                    return this.loadScript(location.replace(".dis", ""));
+                    return this.loadScript(location.replace(".dis", ""), pipe);
                 } catch(IOException e) {
                     e.printStackTrace();
                     return false;
                 }
+            } else if(!file.exists()) {
+                File original = file;
+                file = new File(this.scriptDirectory.toFile(), location + ".dis");
+                if(!file.exists()) {
+                    return false;
+                } else {
+                    Files.copy(Paths.get(file.toURI()), Paths.get(original.toURI()));
+                    file.delete();
+                    return this.loadScript(location.replace(".dis", ""));
+                }
             }
+        } catch(Exception ex) {
+            ex.printStackTrace();
+            this.sendStacktrace(ex, pipe);
+            return false;
         }
         return false;
     }
@@ -318,16 +634,17 @@ public class ScriptManager {
         if(!location.endsWith(".js")) {
             location += ".js";
         }
-        File file = new File(this.directory.toFile(), location);
+        File file = new File(this.scriptDirectory.toFile(), location);
         if(!file.exists()) {
             return false;
         } else {
-            File toCopy = new File(this.directory.toFile(), location + ".dis");
+            File toCopy = new File(this.scriptDirectory.toFile(), location + ".dis");
             try {
                 this.unloadScript(location, pipe);
                 Files.copy(Paths.get(file.toURI()), Paths.get(toCopy.toURI()));
-            } catch(IOException e) {
-                e.printStackTrace();
+            } catch(Exception ex) {
+                ex.printStackTrace();
+                this.sendStacktrace(ex, pipe);
                 return false;
             }
             file.delete();
@@ -335,19 +652,10 @@ public class ScriptManager {
         }
     }
 
-    private void sendStacktrace(Exception e, Pipe pipe) {
-        String message = e.getMessage();
-        if(message.contains("<eval>")) {
-            pipe.out(message);
-        } else {
-            String st = ExceptionUtils.getStackTrace(e);
-            Pattern pattern = Pattern.compile("(?<=program\\(<eval>:)(\\d*)(?=\\))");
-            Matcher matcher = pattern.matcher(st);
-            if(matcher.find()) {
-                message += " at line " + matcher.group();
-            }
-            pipe.out(message);
-        }
-
+    private void sendStacktrace(Exception ex, Pipe pipe) {
+        if (pipe == null) {
+            return;
+        } //TODO - update when QJS4J gets better error logging
+        pipe.out(ex.getMessage());
     }
 }
